--- a/package.json
+++ b/package.json
@@ -56,9 +56,11 @@
     "@adonisjs/core": "^6.9.0",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^20.6.0",
+    "@adonisjs/mail": "^9.2.1",
     "@vinejs/vine": "^2.1.0",
     "luxon": "^3.4.4",
     "mysql2": "^3.10.1",
+    "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "uuid": "^10.0.0"
   },
