--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ DB_PASSWORD=
 DB_DATABASE=
 SMTP_HOST=
 SMTP_PORT=
+
+FRONT_END_URL=http://localhost:3000
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
