--- a/.github/workflows/main_properties-sec.yml
+++ b/.github/workflows/main_properties-sec.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - properties-sec
 
 on:
@@ -28,7 +25,11 @@ jobs:
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          mkdir -p release
+          cp -r * release/
+          cd release
+          zip -r ../release.zip .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -48,15 +49,16 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: node-app
+          path: release.zip
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: unzip release.zip -d release
 
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'properties-sec'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_0DC252D88BBC45C19A0F322FB51A642C }}
-          package: .
+          package: ./release
