--- a/.github/workflows/main_properties-sec.yml
+++ b/.github/workflows/main_properties-sec.yml
@@ -18,18 +18,32 @@ jobs:
         with:
           node-version: '20.x'
 
+      - name: Delete Old Artifacts
+        uses: actions/github-script@v6
+        id: artifact
+        with:
+          script: |
+            const res = await github.rest.actions.listArtifactsForRepo({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+            })
+
+            res.data.artifacts
+              .forEach(({ id }) => {
+                github.rest.actions.deleteArtifact({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  artifact_id: id,
+                })
+              })
+
       - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: |
-          mkdir -p release
-          cp -r * release/
-          cd release
-          zip -r ../release.zip .
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -61,4 +75,4 @@ jobs:
           app-name: 'properties-sec'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_0DC252D88BBC45C19A0F322FB51A642C }}
-          package: ./release
+          package: .
