--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@adonisjs/auth": "^9.2.1",
     "@adonisjs/core": "^6.9.0",
     "@adonisjs/cors": "^2.2.1",
+    "@adonisjs/limiter": "^2.3.1",
     "@adonisjs/lucid": "^20.6.0",
     "@adonisjs/mail": "^9.2.1",
     "@adonisjs/redis": "^9.1.0",
