--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "luxon": "^3.4.4",
     "mjml": "^4.15.3",
     "mysql2": "^3.10.1",
+    "nanoid": "^5.0.7",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "uuid": "^10.0.0"
