--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "#database/*": "./database/*.js",
     "#start/*": "./start/*.js",
     "#tests/*": "./tests/*.js",
-    "#config/*": "./config/*.js"
+    "#config/*": "./config/*.js",
+    "#types/*": "./types/*.js",
+    "#constants/*": "./app/constants/*.js"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^7.6.1",
@@ -61,6 +63,7 @@
     "@adonisjs/lucid": "^20.6.0",
     "@adonisjs/mail": "^9.2.1",
     "@adonisjs/redis": "^9.1.0",
+    "@react-email/components": "^0.0.22",
     "@vinejs/vine": "^2.1.0",
     "bullmq": "^5.8.2",
     "edge.js": "^6.0.2",
@@ -68,6 +71,7 @@
     "mjml": "^4.15.3",
     "mysql2": "^3.10.1",
     "nanoid": "^5.0.7",
+    "nodemailer": "^6.9.14",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "uuid": "^10.0.0"
