--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "#tests/*": ["./tests/*.js"],
       "#config/*": ["./config/*.js"],
       "#types/*": ["./types/*.js"],
-      "#constants/*": ["./app/constants/*.js"]
+      "#constants/*": ["./app/constants/*.js"],
+      "#helpers/*": ["./app/helpers/*.js"],
     }
   }
 }
