--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,6 @@ REDIS_PASSWORD=
 LIMITER_STORE=redis
 
 FRONT_END_URL=http://localhost:3000
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
