--- a/package.json
+++ b/package.json
@@ -68,9 +68,11 @@
     "@adonisjs/mail": "^9.2.1",
     "@adonisjs/redis": "^9.1.0",
     "@vinejs/vine": "^2.1.0",
+    "axios": "^1.7.2",
     "bullmq": "^5.8.2",
     "device-detector-js": "^3.0.3",
     "edge.js": "^6.0.2",
+    "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "mjml": "^4.15.3",
     "mysql2": "^3.10.1",
