--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@japa/plugin-adonisjs": "^3.0.1",
     "@japa/runner": "^3.1.4",
     "@swc/core": "^1.5.7",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.12.12",
     "@types/uuid": "^9.0.8",
