--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,5 @@ FRONT_END_URL=http://localhost:3000
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
+
+AZURE_STORAGE_CONNECTION_STRING=
