--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@adonisjs/lucid": "^20.6.0",
     "@adonisjs/mail": "^9.2.2",
     "@adonisjs/redis": "^9.1.0",
+    "@azure/storage-blob": "^12.24.0",
     "@vinejs/vine": "^2.1.0",
     "axios": "^1.7.3",
     "bullmq": "^5.12.0",
