--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "#helpers/*": [
       "./app/helpers/*.js"
     ],
-    "#interfaces": "./app/interfaces/*.js"
+    "#interfaces/*": "./app/interfaces/*.js"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^7.7.0",
