--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,6 @@ GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
 
 AZURE_STORAGE_CONNECTION_STRING=
+
+PAYSTACK_PUBLIC_KEY="pk_test_affde3ad169b37402102fd5fc96aa881dcad150c"
+PAYSTACK_SECRET_KEY=something_secret
