include packmanager to package.json

--- a/package.json
+++ b/package.json
@@ -96,5 +96,6 @@
   "eslintConfig": {
     "extends": "@adonisjs/eslint-config/app"
   },
-  "prettier": "@adonisjs/prettier-config"
+  "prettier": "@adonisjs/prettier-config",
+  "packageManager": "^pnpm@9.11.0"
 }
